# vscode-tauri

./: .gitignore  .npmrc  AGENTS.md  eslint.config.js  package.json  replace_electron.cjs  rewrite.ts
.github/workflows/: tauri-parity-macos.yml  tauri-touchpoint-gate.yml  tauri-upstream-sync.yml
apps/tauri/: README.md
apps/tauri/node/: extension-host-bridge.mjs  fallback.mjs  (+1 more)
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/capabilities/: main-capability.json
apps/tauri/src-tauri/src/: main.rs  metrics.rs  node_fallback.rs  protocol.rs  router.rs
apps/tauri/src-tauri/src/capabilities/: clipboard.rs  dialogs.rs  filesystem.rs  mod.rs  os.rs  power.rs  process.rs  terminal.rs  update.rs  window.rs
docs/: electrobun-merge-policy.md
docs/tauri/: architecture.md  capability-inventory.md  parity-matrix.yaml  test-port-manifest.md  upstream-touchpoints.md
scripts/: code-cli.bat  code-cli.sh  code-electrobun.sh  code-server.bat  code-server.sh  code-tauri.bat  code-tauri.sh  code.bat  code.sh  node-electron.bat  node-electron.sh  open-tauri-built-app.sh  run-tauri-prod-debug.sh  run-tauri-standalone-extension-tests.mjs  test-integration.bat  test-integration.sh  test-tauri-integration.bat  test-tauri-integration.sh  test-tauri-smoke-prod.sh  test-tauri-smoke.bat  test-tauri-smoke.sh  test-tauri-unit.bat  test-tauri-unit.sh  test.bat  test.sh
src/: bootstrap-esm.ts  bootstrap-fork.ts  bootstrap-server.ts  main.ts  tsconfig.base.json
src/typings/: component-explorer.d.ts  electrobun.d.cts  electrobun.d.ts
src/vs/: amdX.ts
(+239 files in other folders)
