[package]
name = "vscode-tauri-host"
version = "0.1.0"
description = "Tauri host for VS Code fork"
authors = ["VS Code Tauri Fork Maintainers"]
license = "MIT"
repository = "https://github.com/williamspiegel/vscode-electrobun"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
base64 = "0.22"
notify = "8.2.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread"] }
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
